# YChatToolsClient

./: CMakeLists.txt  ChatMessageDelegate.qml  README.md  chatmanage.cpp  chatmanage.h  chatmessage.cpp  chatmessage.h  chatmodel.cpp  chatmodel.h  clientsocket.cpp  clientsocket.h  main.cpp  main.qml  packet.cpp  packet.h  qml.qrc
